// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button Danger Button 1`] = `
<button
  className="sc-eCssSg sc-jSgupP sc-fubCfw iTKCcP buvfLk dSMMHN"
  onClick={[Function]}
  type="button"
>
  Button1
</button>
`;

exports[`Storyshots Button Default 1`] = `
<button
  className="sc-eCssSg sc-jSgupP iTKCcP buvfLk"
  disabled={false}
  onClick={[Function]}
  type="button"
>
  Button1
</button>
`;

exports[`Storyshots Button Disabled Button 1`] = `
<button
  className="sc-eCssSg sc-jSgupP iTKCcP TgJby"
  disabled={true}
  onClick={[Function]}
  type="button"
>
  Button1
</button>
`;

exports[`Storyshots Button Info Button 1`] = `
<button
  className="sc-eCssSg sc-jSgupP sc-jrAGrp iTKCcP buvfLk gPnJfW"
  onClick={[Function]}
  type="button"
>
  Button1
</button>
`;

exports[`Storyshots Button Primary Button 1`] = `
<button
  className="sc-eCssSg sc-jSgupP iTKCcP buvfLk"
  onClick={[Function]}
  type="button"
>
  Button1
</button>
`;

exports[`Storyshots Button Secondary Button 1`] = `
<button
  className="sc-eCssSg sc-gKsewC iTKCcP bXJkgn"
  onClick={[Function]}
  type="button"
>
  Button1
</button>
`;

exports[`Storyshots Button Success Button 1`] = `
<button
  className="sc-eCssSg sc-jSgupP sc-iBPRYJ iTKCcP buvfLk hZxjoA"
  onClick={[Function]}
  type="button"
>
  Button1
</button>
`;

exports[`Storyshots Button Warning Button 1`] = `
<button
  className="sc-eCssSg sc-jSgupP sc-pFZIQ iTKCcP buvfLk zWxzO"
  onClick={[Function]}
  type="button"
>
  Button1
</button>
`;

exports[`Storyshots Checklist/Box Checked 1`] = `
<div
  className="sc-kEjbxe eOKFWP"
  onClick={[Function]}
>
  <div
    checked={true}
    className="sc-crrsfI bFIkjO"
    name="checked"
  >
    <span
      className="sc-iqHYGH fFlhTb"
    />
  </div>
  <label
    className="sc-dQppl dXPRne"
  >
    Checkbox 1
  </label>
</div>
`;

exports[`Storyshots Checklist/Box Default 1`] = `
<div
  className="sc-kEjbxe eOKFWP"
  onClick={[Function]}
>
  <div
    checked={false}
    className="sc-crrsfI dReMVQ"
    name="checked"
  >
    <span
      className="sc-iqHYGH fFlhTb"
    />
  </div>
  <label
    className="sc-dQppl dXPRne"
  >
    Checkbox 1
  </label>
</div>
`;

exports[`Storyshots Checklist/List Button Count Selected 1`] = `
Array [
  <div
    className="sc-kstrdz eoWfOL"
  >
    <h3
      className="sc-hBEYos llFkua"
    >
      Checklist
    </h3>
    <ul
      className="sc-bqyKva fXFDoT"
    >
      <li>
        No results
      </li>
    </ul>
    <div
      className="sc-fodVxV jgAuTo"
    >
      <button
        className="sc-eCssSg sc-jSgupP iTKCcP buvfLk"
        onClick={[Function]}
        type="button"
      >
        Filter 0 items
      </button>
    </div>
  </div>,
  <div>
    
  </div>,
]
`;

exports[`Storyshots Checklist/List Count Selected 1`] = `
Array [
  <div
    className="sc-kstrdz eoWfOL"
  >
    <h3
      className="sc-hBEYos llFkua"
    >
      Checklist
    </h3>
    <ul
      className="sc-bqyKva fXFDoT"
    >
      <li>
        No results
      </li>
    </ul>
  </div>,
  <div>
    Checked count: 
    0
  </div>,
  <div>
    Checked ids:
  </div>,
]
`;

exports[`Storyshots Checklist/List Custom Line Item 1`] = `
<div
  className="sc-kstrdz eoWfOL"
>
  <h3
    className="sc-hBEYos llFkua"
  >
    TextList
  </h3>
  <ul
    className="sc-bqyKva fXFDoT"
  >
    <li>
      No results
    </li>
  </ul>
</div>
`;

exports[`Storyshots Checklist/List Default 1`] = `
<div
  className="sc-kstrdz eoWfOL"
>
  <h3
    className="sc-hBEYos llFkua"
  >
    Checklist
  </h3>
  <ul
    className="sc-bqyKva fXFDoT"
  >
    <li>
      No results
    </li>
  </ul>
</div>
`;

exports[`Storyshots Checklist/List Default Action Component 1`] = `
<div
  className="sc-kstrdz eoWfOL"
>
  <h3
    className="sc-hBEYos llFkua"
  >
    Checklist
  </h3>
  <div
    className="sc-fFubgz eqQAiP"
  >
    <div
      className="MuiFormControl-root MuiTextField-root"
    >
      <label
        className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink"
        data-shrink={true}
      >
        Filter...
      </label>
      <div
        className="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl MuiInputBase-adornedStart"
        onClick={[Function]}
      >
        <div
          className="MuiInputAdornment-root MuiInputAdornment-positionStart"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
            />
          </svg>
        </div>
        <input
          aria-invalid={false}
          autoFocus={false}
          className="MuiInputBase-input MuiInput-input MuiInputBase-inputAdornedStart MuiInputBase-inputTypeSearch MuiInput-inputTypeSearch"
          disabled={false}
          onAnimationStart={[Function]}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          required={false}
          type="search"
        />
      </div>
    </div>
  </div>
  <ul
    className="sc-bqyKva eIiHUQ"
  >
    <li>
      No results
    </li>
  </ul>
  <button
    className="MuiButtonBase-root MuiButton-root MuiButton-contained sc-bkzZxe enUpLh MuiButton-containedPrimary MuiButton-containedSizeLarge MuiButton-sizeLarge MuiButton-disableElevation"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label"
    >
      Action
    </span>
  </button>
</div>
`;

exports[`Storyshots Checklist/List Empty Story 1`] = `
<div
  className="sc-kstrdz eoWfOL"
>
  <h3
    className="sc-hBEYos llFkua"
  >
    Checklist compo
  </h3>
  <ul
    className="sc-bqyKva fXFDoT"
  >
    <li>
      No results
    </li>
  </ul>
</div>
`;

exports[`Storyshots Checklist/List Filter Action Component 1`] = `
Array [
  <div
    className="sc-kstrdz eoWfOL"
  >
    <h3
      className="sc-hBEYos llFkua"
    >
      Checklist
    </h3>
    <div
      className="sc-fFubgz eqQAiP"
    >
      <button
        className="sc-eCssSg sc-jSgupP iTKCcP buvfLk"
        onClick={[Function]}
        type="button"
      >
        Filter 0 items
      </button>
    </div>
    <ul
      className="sc-bqyKva fXFDoT"
    >
      <li>
        No results
      </li>
    </ul>
  </div>,
  <div>
    
  </div>,
]
`;

exports[`Storyshots Checklist/List Filtering 1`] = `
Array [
  <div
    className="sc-kstrdz eoWfOL"
  >
    <h3
      className="sc-hBEYos llFkua"
    >
      Filterable Checklist
    </h3>
    <div
      className="sc-fFubgz eqQAiP"
    >
      <div
        className="MuiFormControl-root MuiTextField-root"
      >
        <label
          className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated"
          data-shrink={false}
        >
          Filter...
        </label>
        <div
          className="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
          onClick={[Function]}
        >
          <input
            aria-invalid={false}
            autoFocus={false}
            className="MuiInputBase-input MuiInput-input MuiInputBase-inputTypeSearch MuiInput-inputTypeSearch"
            disabled={false}
            onAnimationStart={[Function]}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="search"
          />
        </div>
      </div>
    </div>
    <ul
      className="sc-bqyKva fXFDoT"
    >
      <li>
        No results
      </li>
    </ul>
  </div>,
  <div>
    
  </div>,
]
`;

exports[`Storyshots Checklist/List Long Filter 1`] = `
<div
  className="sc-kstrdz eoWfOL"
>
  <h3
    className="sc-hBEYos llFkua"
  >
    Checklist
  </h3>
  <div
    className="sc-fFubgz eqQAiP"
  >
    <div
      className="MuiFormControl-root MuiTextField-root"
    >
      <label
        className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated"
        data-shrink={false}
      >
        Filter...
      </label>
      <div
        className="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
        onClick={[Function]}
      >
        <input
          aria-invalid={false}
          autoFocus={false}
          className="MuiInputBase-input MuiInput-input MuiInputBase-inputTypeSearch MuiInput-inputTypeSearch"
          disabled={false}
          onAnimationStart={[Function]}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          required={false}
          type="search"
        />
      </div>
    </div>
  </div>
  <ul
    className="sc-bqyKva eIiHUQ"
  >
    <li>
      No results
    </li>
  </ul>
  <div
    className="sc-fodVxV jgAuTo"
  >
    <button
      className="sc-eCssSg sc-jSgupP iTKCcP buvfLk"
      type="button"
    >
      Action
    </button>
  </div>
</div>
`;

exports[`Storyshots Checklist/List Title Less 1`] = `
<div
  className="sc-kstrdz eoWfOL"
>
  <ul
    className="sc-bqyKva fwhBxZ"
  >
    <li>
      No results
    </li>
  </ul>
</div>
`;

exports[`Storyshots DataGrid/DataGrid Cell Formatter 1`] = `
<div
  className="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
>
  <div
    className="Loader"
    style={
      Object {
        "display": "flex",
        "flexDirection": "column",
        "maxHeight": "100vh",
        "position": "relative",
      }
    }
  >
    <div
      className="Loader__content"
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <div
        className="DataGridToolbar-root-12"
      />
      <div
        aria-colcount={0}
        aria-rowcount={1}
        className="rdg r104f42s700-canary46 rdg-light"
        onScroll={[Function]}
        role="grid"
        style={
          Object {
            "--filter-row-height": "50px",
            "--header-row-height": "35px",
            "--row-width": "0px",
            "--summary-row-height": "35px",
            "--template-columns": "",
            "flex": "1 1 auto",
          }
        }
      >
        <div
          aria-rowindex={1}
          className="rdg-header-row h1fquj5h700-canary46 h19m9p7h700-canary46"
          role="row"
        />
        <div
          className="rdg-focus-sink f7ly7s700-canary46"
          onFocus={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        />
        <div
          style={
            Object {
              "height": 0,
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots DataGrid/DataGrid Client Sortable 1`] = `
<div
  className="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
>
  <div
    className="Loader"
    style={
      Object {
        "display": "flex",
        "flexDirection": "column",
        "maxHeight": "100vh",
        "position": "relative",
      }
    }
  >
    <div
      className="Loader__content"
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <div
        className="DataGridToolbar-root-30"
      />
      <div
        aria-colcount={0}
        aria-rowcount={1}
        className="rdg r104f42s700-canary46 rdg-light"
        onScroll={[Function]}
        role="grid"
        style={
          Object {
            "--filter-row-height": "50px",
            "--header-row-height": "35px",
            "--row-width": "0px",
            "--summary-row-height": "35px",
            "--template-columns": "",
            "flex": "1 1 auto",
          }
        }
      >
        <div
          aria-rowindex={1}
          className="rdg-header-row h1fquj5h700-canary46 h19m9p7h700-canary46"
          role="row"
        />
        <div
          className="rdg-focus-sink f7ly7s700-canary46"
          onFocus={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        />
        <div
          style={
            Object {
              "height": 0,
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots DataGrid/DataGrid Column Display Selection 1`] = `
<div
  className="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
>
  <div
    className="Loader"
    style={
      Object {
        "display": "flex",
        "flexDirection": "column",
        "maxHeight": "100vh",
        "position": "relative",
      }
    }
  >
    <div
      className="Loader__content"
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <div
        className="DataGridToolbar-root-36"
      >
        <div
          className="MuiToolbar-root MuiToolbar-dense DataGridToolbar-toolbar-35"
        >
          <div
            style={
              Object {
                "flex": 1,
              }
            }
          />
          <div
            style={
              Object {
                "flex": 1,
              }
            }
          />
          <button
            className="MuiButtonBase-root MuiIconButton-root"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={0}
            type="button"
            variant="default"
          >
            <span
              className="MuiIconButton-label"
            >
              <svg
                aria-hidden={true}
                className="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 18h5V5h-5v13zm-6 0h5V5H4v13zM16 5v13h5V5h-5z"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
      <div
        aria-colcount={0}
        aria-rowcount={1}
        className="rdg r104f42s700-canary46 rdg-light"
        onScroll={[Function]}
        role="grid"
        style={
          Object {
            "--filter-row-height": "50px",
            "--header-row-height": "35px",
            "--row-width": "0px",
            "--summary-row-height": "35px",
            "--template-columns": "",
            "flex": "1 1 auto",
          }
        }
      >
        <div
          aria-rowindex={1}
          className="rdg-header-row h1fquj5h700-canary46 h19m9p7h700-canary46"
          role="row"
        />
        <div
          className="rdg-focus-sink f7ly7s700-canary46"
          onFocus={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        />
        <div
          style={
            Object {
              "height": 0,
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots DataGrid/DataGrid Default 1`] = `
<div
  className="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
>
  <div
    className="Loader"
    style={
      Object {
        "display": "flex",
        "flexDirection": "column",
        "maxHeight": "100vh",
        "position": "relative",
      }
    }
  >
    <div
      className="Loader__content"
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <div
        className="DataGridToolbar-root-6"
      />
      <div
        aria-colcount={0}
        aria-rowcount={1}
        className="rdg r104f42s700-canary46 rdg-light"
        onScroll={[Function]}
        role="grid"
        style={
          Object {
            "--filter-row-height": "50px",
            "--header-row-height": "35px",
            "--row-width": "0px",
            "--summary-row-height": "35px",
            "--template-columns": "",
            "flex": "1 1 auto",
          }
        }
      >
        <div
          aria-rowindex={1}
          className="rdg-header-row h1fquj5h700-canary46 h19m9p7h700-canary46"
          role="row"
        />
        <div
          className="rdg-focus-sink f7ly7s700-canary46"
          onFocus={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        />
        <div
          style={
            Object {
              "height": 0,
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots DataGrid/DataGrid Demo Context Menu 1`] = `
<div
  className="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
>
  <div
    className="Loader"
    style={
      Object {
        "display": "flex",
        "flexDirection": "column",
        "maxHeight": "100vh",
        "position": "relative",
      }
    }
  >
    <div
      className="Loader__content"
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <div
        className="DataGridToolbar-root-54"
      />
      <div
        aria-colcount={0}
        aria-rowcount={1}
        className="rdg r104f42s700-canary46 rdg-light"
        onScroll={[Function]}
        role="grid"
        style={
          Object {
            "--filter-row-height": "50px",
            "--header-row-height": "35px",
            "--row-width": "0px",
            "--summary-row-height": "35px",
            "--template-columns": "",
            "flex": "1 1 auto",
          }
        }
      >
        <div
          aria-rowindex={1}
          className="rdg-header-row h1fquj5h700-canary46 h19m9p7h700-canary46"
          role="row"
        />
        <div
          className="rdg-focus-sink f7ly7s700-canary46"
          onFocus={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        />
        <div
          style={
            Object {
              "height": 0,
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots DataGrid/DataGrid Expandable 1`] = `
<div
  className="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
>
  <div
    className="Loader"
    style={
      Object {
        "display": "flex",
        "flexDirection": "column",
        "maxHeight": "100vh",
        "position": "relative",
      }
    }
  >
    <div
      className="Loader__content"
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <div
        className="DataGridToolbar-root-84"
      />
      <div
        aria-colcount={0}
        aria-rowcount={1}
        className="rdg r104f42s700-canary46 rdg-light"
        onScroll={[Function]}
        role="grid"
        style={
          Object {
            "--filter-row-height": "50px",
            "--header-row-height": "35px",
            "--row-width": "0px",
            "--summary-row-height": "35px",
            "--template-columns": "",
            "flex": "1 1 auto",
          }
        }
      >
        <div
          aria-rowindex={1}
          className="rdg-header-row h1fquj5h700-canary46 h19m9p7h700-canary46"
          role="row"
        />
        <div
          className="rdg-focus-sink f7ly7s700-canary46"
          onFocus={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        />
        <div
          style={
            Object {
              "height": 0,
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots DataGrid/DataGrid Grid Props 1`] = `
<div
  className="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
>
  <div
    className="Loader"
    style={
      Object {
        "display": "flex",
        "flexDirection": "column",
        "maxHeight": "100vh",
        "position": "relative",
      }
    }
  >
    <div
      className="Loader__content"
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <div
        className="DataGridToolbar-root-24"
      />
      <div
        aria-colcount={0}
        aria-rowcount={1}
        className="rdg r104f42s700-canary46 rdg-light"
        onScroll={[Function]}
        role="grid"
        style={
          Object {
            "--filter-row-height": "50px",
            "--header-row-height": "60px",
            "--row-width": "0px",
            "--summary-row-height": "60px",
            "--template-columns": "",
            "flex": "1 1 auto",
          }
        }
      >
        <div
          aria-rowindex={1}
          className="rdg-header-row h1fquj5h700-canary46 h19m9p7h700-canary46"
          role="row"
        />
        <div
          className="rdg-focus-sink f7ly7s700-canary46"
          onFocus={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        />
        <div
          style={
            Object {
              "height": 0,
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots DataGrid/DataGrid Infinite Loader 1`] = `
<div
  className="MuiGrid-root MuiGrid-container"
>
  <div
    className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
  >
    <div
      className="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
      style={
        Object {
          "display": "flex",
          "flexDirection": "column",
          "height": "70vh",
        }
      }
    >
      <div
        className="Loader"
        style={
          Object {
            "display": "flex",
            "flexDirection": "column",
            "maxHeight": "100vh",
            "position": "relative",
          }
        }
      >
        <div
          className="Loader__content"
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <div
            className="DataGridToolbar-root-78"
          >
            <div
              className="MuiToolbar-root MuiToolbar-dense DataGridToolbar-toolbar-77"
            >
              <div
                className="MuiButtonGroup-root"
                role="group"
              >
                <button
                  className="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedHorizontal MuiButtonGroup-groupedOutlined"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onDragLeave={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  tabIndex={0}
                  type="button"
                >
                  <span
                    className="MuiButton-label"
                  >
                    Left
                  </span>
                </button>
              </div>
              <div
                style={
                  Object {
                    "flex": 1,
                  }
                }
              />
              <h6
                className="MuiTypography-root MuiTypography-h6"
              >
                Heading
              </h6>
              <div
                style={
                  Object {
                    "flex": 1,
                  }
                }
              />
              <button
                className="MuiButtonBase-root MuiIconButton-root"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onDragLeave={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={0}
                type="button"
                variant="default"
              >
                <span
                  className="MuiIconButton-label"
                >
                  <svg
                    aria-hidden={true}
                    className="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M10 18h5V5h-5v13zm-6 0h5V5H4v13zM16 5v13h5V5h-5z"
                    />
                  </svg>
                </span>
              </button>
              <button
                className="MuiButtonBase-root MuiIconButton-root"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onDragLeave={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={0}
                type="button"
                variant="default"
              >
                <span
                  className="MuiIconButton-label"
                >
                  <svg
                    aria-hidden={true}
                    className="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M10 18h4v-2h-4v2zM3 6v2h18V6H3zm3 7h12v-2H6v2z"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
          <div
            aria-colcount={0}
            aria-rowcount={2}
            className="rdg r104f42s700-canary46 rdg-light"
            onScroll={[Function]}
            role="grid"
            style={
              Object {
                "--filter-row-height": "50px",
                "--header-row-height": "35px",
                "--row-width": "0px",
                "--summary-row-height": "35px",
                "--template-columns": "",
                "flex": "1 1 auto",
              }
            }
          >
            <div
              aria-rowindex={1}
              className="rdg-header-row h1fquj5h700-canary46 h19m9p7h700-canary46"
              role="row"
            />
            <div
              aria-rowindex={2}
              className="rdg-filter-row h1fquj5h700-canary46 fkdzs1h700-canary46"
              role="row"
            />
            <div
              className="rdg-focus-sink f7ly7s700-canary46"
              onFocus={[Function]}
              onKeyDown={[Function]}
              tabIndex={0}
            />
            <div
              style={
                Object {
                  "height": 0,
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots DataGrid/DataGrid Loader 1`] = `
<div
  className="MuiGrid-root MuiGrid-container"
>
  <div
    className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
  >
    <div
      className="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
      style={
        Object {
          "display": "flex",
          "flexDirection": "column",
          "height": "70vh",
        }
      }
    >
      <div
        className="Loader"
        style={
          Object {
            "display": "flex",
            "flexDirection": "column",
            "maxHeight": "100vh",
            "position": "relative",
          }
        }
      >
        <div
          className="Loader__content"
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <div
            className="DataGridToolbar-root-72"
          >
            <div
              className="MuiToolbar-root MuiToolbar-dense DataGridToolbar-toolbar-71"
            >
              <div
                className="MuiButtonGroup-root"
                role="group"
              >
                <button
                  className="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedHorizontal MuiButtonGroup-groupedOutlined"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onDragLeave={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  tabIndex={0}
                  type="button"
                >
                  <span
                    className="MuiButton-label"
                  >
                    Left
                  </span>
                </button>
              </div>
              <div
                style={
                  Object {
                    "flex": 1,
                  }
                }
              />
              <h6
                className="MuiTypography-root MuiTypography-h6"
              >
                Heading
              </h6>
              <div
                style={
                  Object {
                    "flex": 1,
                  }
                }
              />
              <button
                className="MuiButtonBase-root MuiIconButton-root"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onDragLeave={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={0}
                type="button"
                variant="default"
              >
                <span
                  className="MuiIconButton-label"
                >
                  <svg
                    aria-hidden={true}
                    className="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M10 18h5V5h-5v13zm-6 0h5V5H4v13zM16 5v13h5V5h-5z"
                    />
                  </svg>
                </span>
              </button>
              <button
                className="MuiButtonBase-root MuiIconButton-root"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onDragLeave={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={0}
                type="button"
                variant="default"
              >
                <span
                  className="MuiIconButton-label"
                >
                  <svg
                    aria-hidden={true}
                    className="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M10 18h4v-2h-4v2zM3 6v2h18V6H3zm3 7h12v-2H6v2z"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
          <div
            aria-colcount={0}
            aria-rowcount={2}
            className="rdg r104f42s700-canary46 rdg-light"
            onScroll={[Function]}
            role="grid"
            style={
              Object {
                "--filter-row-height": "50px",
                "--header-row-height": "35px",
                "--row-width": "0px",
                "--summary-row-height": "35px",
                "--template-columns": "",
                "flex": "1 1 auto",
              }
            }
          >
            <div
              aria-rowindex={1}
              className="rdg-header-row h1fquj5h700-canary46 h19m9p7h700-canary46"
              role="row"
            />
            <div
              aria-rowindex={2}
              className="rdg-filter-row h1fquj5h700-canary46 fkdzs1h700-canary46"
              role="row"
            />
            <div
              className="rdg-focus-sink f7ly7s700-canary46"
              onFocus={[Function]}
              onKeyDown={[Function]}
              tabIndex={0}
            />
            <div
              style={
                Object {
                  "height": 0,
                }
              }
            />
          </div>
        </div>
      </div>
      <button
        className="MuiButtonBase-root MuiButton-root MuiButton-text"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-label"
        >
          Simulate Loading
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots DataGrid/DataGrid Redraw Bug 1`] = `
<div
  className="MuiGrid-root MuiGrid-container"
>
  <div
    className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
  >
    <div
      className="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
      style={
        Object {
          "display": "flex",
          "flexDirection": "column",
          "height": "70vh",
        }
      }
    >
      <div
        className="Loader"
        style={
          Object {
            "display": "flex",
            "flex": "1 1 auto",
            "flexDirection": "column",
            "position": "relative",
          }
        }
      >
        <div
          className="Loader__content"
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <div
            className="DataGridToolbar-root-66"
          />
          <div
            aria-colcount={0}
            aria-rowcount={1}
            className="rdg r104f42s700-canary46 rdg-light"
            onScroll={[Function]}
            role="grid"
            style={
              Object {
                "--filter-row-height": "50px",
                "--header-row-height": "35px",
                "--row-width": "0px",
                "--summary-row-height": "35px",
                "--template-columns": "",
                "flex": "1 1 auto",
              }
            }
          >
            <div
              aria-rowindex={1}
              className="rdg-header-row h1fquj5h700-canary46 h19m9p7h700-canary46"
              role="row"
            />
            <div
              className="rdg-focus-sink f7ly7s700-canary46"
              onFocus={[Function]}
              onKeyDown={[Function]}
              tabIndex={0}
            />
            <div
              style={
                Object {
                  "height": 0,
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots DataGrid/DataGrid Reorderable 1`] = `
<div
  className="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
>
  <div
    className="Loader"
    style={
      Object {
        "display": "flex",
        "flexDirection": "column",
        "maxHeight": "100vh",
        "position": "relative",
      }
    }
  >
    <div
      className="Loader__content"
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <div
        className="DataGridToolbar-root-18"
      />
      <div
        aria-colcount={0}
        aria-rowcount={1}
        className="rdg r104f42s700-canary46 rdg-light"
        onScroll={[Function]}
        role="grid"
        style={
          Object {
            "--filter-row-height": "50px",
            "--header-row-height": "35px",
            "--row-width": "0px",
            "--summary-row-height": "35px",
            "--template-columns": "",
            "flex": "1 1 auto",
          }
        }
      >
        <div
          aria-rowindex={1}
          className="rdg-header-row h1fquj5h700-canary46 h19m9p7h700-canary46"
          role="row"
        />
        <div
          className="rdg-focus-sink f7ly7s700-canary46"
          onFocus={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        />
        <div
          style={
            Object {
              "height": 0,
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots DataGrid/DataGrid Selectable 1`] = `
<div
  className="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
>
  <div
    className="Loader"
    style={
      Object {
        "display": "flex",
        "flexDirection": "column",
        "maxHeight": "100vh",
        "position": "relative",
      }
    }
  >
    <div
      className="Loader__content"
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <div
        className="DataGridToolbar-root-48"
      />
      <div
        aria-colcount={0}
        aria-multiselectable={true}
        aria-rowcount={1}
        className="rdg r104f42s700-canary46 rdg-light"
        onScroll={[Function]}
        role="grid"
        style={
          Object {
            "--filter-row-height": "50px",
            "--header-row-height": "35px",
            "--row-width": "0px",
            "--summary-row-height": "35px",
            "--template-columns": "",
            "flex": "1 1 auto",
          }
        }
      >
        <div
          aria-rowindex={1}
          className="rdg-header-row h1fquj5h700-canary46 h19m9p7h700-canary46"
          role="row"
        />
        <div
          className="rdg-focus-sink f7ly7s700-canary46"
          onFocus={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        />
        <div
          style={
            Object {
              "height": 0,
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots DataGrid/DataGrid Server Filter Sort 1`] = `
<div
  className="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
>
  <div
    className="Loader"
    style={
      Object {
        "display": "flex",
        "flexDirection": "column",
        "maxHeight": "100vh",
        "position": "relative",
      }
    }
  >
    <div
      className="Loader__content"
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <div
        className="DataGridToolbar-root-42"
      >
        <div
          className="MuiToolbar-root MuiToolbar-dense DataGridToolbar-toolbar-41"
        >
          <div
            style={
              Object {
                "flex": 1,
              }
            }
          />
          <div
            style={
              Object {
                "flex": 1,
              }
            }
          />
          <button
            className="MuiButtonBase-root MuiIconButton-root"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={0}
            type="button"
            variant="default"
          >
            <span
              className="MuiIconButton-label"
            >
              <svg
                aria-hidden={true}
                className="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 18h5V5h-5v13zm-6 0h5V5H4v13zM16 5v13h5V5h-5z"
                />
              </svg>
            </span>
          </button>
          <button
            className="MuiButtonBase-root MuiIconButton-root"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={0}
            type="button"
            variant="default"
          >
            <span
              className="MuiIconButton-label"
            >
              <svg
                aria-hidden={true}
                className="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 18h4v-2h-4v2zM3 6v2h18V6H3zm3 7h12v-2H6v2z"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
      <div
        aria-colcount={0}
        aria-rowcount={2}
        className="rdg r104f42s700-canary46 rdg-light"
        onScroll={[Function]}
        role="grid"
        style={
          Object {
            "--filter-row-height": "50px",
            "--header-row-height": "35px",
            "--row-width": "0px",
            "--summary-row-height": "35px",
            "--template-columns": "",
            "flex": "1 1 auto",
          }
        }
      >
        <div
          aria-rowindex={1}
          className="rdg-header-row h1fquj5h700-canary46 h19m9p7h700-canary46"
          role="row"
        />
        <div
          aria-rowindex={2}
          className="rdg-filter-row h1fquj5h700-canary46 fkdzs1h700-canary46"
          role="row"
        />
        <div
          className="rdg-focus-sink f7ly7s700-canary46"
          onFocus={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        />
        <div
          style={
            Object {
              "height": 0,
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots DataGrid/DataGrid Toolbar Accessory 1`] = `
<div
  className="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
>
  <div
    className="Loader"
    style={
      Object {
        "display": "flex",
        "flexDirection": "column",
        "maxHeight": "100vh",
        "position": "relative",
      }
    }
  >
    <div
      className="Loader__content"
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <div
        className="DataGridToolbar-root-60"
      >
        <div
          className="MuiToolbar-root MuiToolbar-dense DataGridToolbar-toolbar-59"
        >
          <div
            className="MuiButtonGroup-root"
            role="group"
          >
            <button
              className="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedHorizontal MuiButtonGroup-groupedOutlined"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={0}
              type="button"
            >
              <span
                className="MuiButton-label"
              >
                Left
              </span>
            </button>
          </div>
          <div
            style={
              Object {
                "flex": 1,
              }
            }
          />
          <h6
            className="MuiTypography-root MuiTypography-h6"
          >
            Heading
          </h6>
          <div
            style={
              Object {
                "flex": 1,
              }
            }
          />
          <button
            className="MuiButtonBase-root MuiIconButton-root"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={0}
            type="button"
            variant="default"
          >
            <span
              className="MuiIconButton-label"
            >
              <svg
                aria-hidden={true}
                className="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 18h5V5h-5v13zm-6 0h5V5H4v13zM16 5v13h5V5h-5z"
                />
              </svg>
            </span>
          </button>
          <button
            className="MuiButtonBase-root MuiIconButton-root"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={0}
            type="button"
            variant="default"
          >
            <span
              className="MuiIconButton-label"
            >
              <svg
                aria-hidden={true}
                className="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 18h4v-2h-4v2zM3 6v2h18V6H3zm3 7h12v-2H6v2z"
                />
              </svg>
            </span>
          </button>
          <div
            className="MuiButtonGroup-root"
            role="group"
          >
            <button
              className="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedHorizontal MuiButtonGroup-groupedOutlined"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={0}
              type="button"
            >
              <span
                className="MuiButton-label"
              >
                Right
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        aria-colcount={0}
        aria-rowcount={2}
        className="rdg r104f42s700-canary46 rdg-light"
        onScroll={[Function]}
        role="grid"
        style={
          Object {
            "--filter-row-height": "50px",
            "--header-row-height": "35px",
            "--row-width": "0px",
            "--summary-row-height": "35px",
            "--template-columns": "",
            "flex": "1 1 auto",
          }
        }
      >
        <div
          aria-rowindex={1}
          className="rdg-header-row h1fquj5h700-canary46 h19m9p7h700-canary46"
          role="row"
        />
        <div
          aria-rowindex={2}
          className="rdg-filter-row h1fquj5h700-canary46 fkdzs1h700-canary46"
          role="row"
        />
        <div
          className="rdg-focus-sink f7ly7s700-canary46"
          onFocus={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        />
        <div
          style={
            Object {
              "height": 0,
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots EdgeContainer Default 1`] = `
<div
  style={
    Object {
      "height": "150px",
      "width": "300px",
    }
  }
>
  <div
    className="sc-hKgILt ehlsxw"
  >
    <p
      className="MuiTypography-root MuiTypography-body1"
    >
      Edge Container
    </p>
  </div>
</div>
`;

exports[`Storyshots EdgeContainer Variant 1`] = `
<div
  style={
    Object {
      "height": "150px",
      "width": "300px",
    }
  }
>
  <div
    className="sc-hKgILt kwWBHv"
  >
    <p
      className="MuiTypography-root MuiTypography-body1"
    >
      Edge Container
    </p>
  </div>
</div>
`;

exports[`Storyshots Grid/Column Default 1`] = `
<div
  className="sc-kfzAmx fFFrMR"
>
  <div
    className="sc-idOhPF"
  >
    <div
      className="sc-dIUggk ispqBL"
      onClick={[Function]}
    >
      <div
        className="sc-hHftDr enidin"
      >
        ColTitle
      </div>
      <div
        className="sc-dmlrTW PQGKo"
      >
        ColSubtitle
      </div>
    </div>
  </div>
  <div
    className="sc-idOhPF"
  >
    <div
      className="sc-dIUggk bcnGBJ"
      onClick={[Function]}
    >
      <div
        className="sc-hHftDr enidin"
      >
        Elem one
      </div>
      <div
        className="sc-dmlrTW PQGKo"
      />
    </div>
  </div>
  <div
    className="sc-idOhPF"
  >
    <div
      className="sc-dIUggk cHiELO"
      onClick={[Function]}
    >
      <div
        className="sc-hHftDr enidin"
      >
        Elem two (scheduled)
      </div>
      <div
        className="sc-dmlrTW PQGKo"
      />
    </div>
  </div>
  <div
    className="sc-idOhPF"
  >
    <div
      className="sc-dIUggk bcnGBJ"
      onClick={[Function]}
    >
      <div
        className="sc-hHftDr enidin"
      >
        Elem three
      </div>
      <div
        className="sc-dmlrTW PQGKo"
      />
    </div>
  </div>
  <div
    className="sc-idOhPF"
  >
    <div
      className="sc-dIUggk bcnGBJ"
      onClick={[Function]}
    >
      <div
        className="sc-hHftDr enidin"
      >
        Elem four
      </div>
      <div
        className="sc-dmlrTW PQGKo"
      />
    </div>
  </div>
  <div
    className="sc-idOhPF"
  >
    <div
      className="sc-dIUggk bcnGBJ"
      onClick={[Function]}
    >
      <div
        className="sc-hHftDr enidin"
      >
        Elem five
      </div>
      <div
        className="sc-dmlrTW PQGKo"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Grid/Column Progress 1`] = `
<div
  className="sc-kfzAmx fFFrMR"
>
  <div
    className="sc-idOhPF"
  >
    <div
      className="sc-dIUggk isqrKf"
      onClick={[Function]}
    >
      <div
        className="sc-hHftDr enidin"
      >
        ColTitle
      </div>
      <div
        className="sc-dmlrTW PQGKo"
      >
        ColSubtitle
      </div>
    </div>
    <div
      className="MuiLinearProgress-root MuiLinearProgress-colorPrimary MuiLinearProgress-indeterminate"
      role="progressbar"
    >
      <div
        className="MuiLinearProgress-bar MuiLinearProgress-barColorPrimary MuiLinearProgress-bar1Indeterminate"
        style={Object {}}
      />
      <div
        className="MuiLinearProgress-bar MuiLinearProgress-bar2Indeterminate MuiLinearProgress-barColorPrimary"
        style={Object {}}
      />
    </div>
  </div>
  <div
    className="sc-idOhPF"
  >
    <div
      className="sc-dIUggk bcnGBJ"
      onClick={[Function]}
    >
      <div
        className="sc-hHftDr enidin"
      >
        Elem one
      </div>
      <div
        className="sc-dmlrTW PQGKo"
      />
    </div>
  </div>
  <div
    className="sc-idOhPF"
  >
    <div
      className="sc-dIUggk cHiELO"
      onClick={[Function]}
    >
      <div
        className="sc-hHftDr enidin"
      >
        Elem two (scheduled)
      </div>
      <div
        className="sc-dmlrTW PQGKo"
      />
    </div>
  </div>
  <div
    className="sc-idOhPF"
  >
    <div
      className="sc-dIUggk bcnGBJ"
      onClick={[Function]}
    >
      <div
        className="sc-hHftDr enidin"
      >
        Elem three
      </div>
      <div
        className="sc-dmlrTW PQGKo"
      />
    </div>
  </div>
  <div
    className="sc-idOhPF"
  >
    <div
      className="sc-dIUggk bcnGBJ"
      onClick={[Function]}
    >
      <div
        className="sc-hHftDr enidin"
      >
        Elem four
      </div>
      <div
        className="sc-dmlrTW PQGKo"
      />
    </div>
  </div>
  <div
    className="sc-idOhPF"
  >
    <div
      className="sc-dIUggk bcnGBJ"
      onClick={[Function]}
    >
      <div
        className="sc-hHftDr enidin"
      >
        Elem five
      </div>
      <div
        className="sc-dmlrTW PQGKo"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Grid/Element Available 1`] = `
<div
  className="sc-idOhPF"
>
  <div
    className="sc-dIUggk eaOsKC"
    onClick={[Function]}
  >
    <div
      className="sc-hHftDr enidin"
    >
      Element1
    </div>
    <div
      className="sc-dmlrTW PQGKo"
    />
  </div>
</div>
`;

exports[`Storyshots Grid/Element Closed 1`] = `
<div
  className="sc-idOhPF"
>
  <div
    className="sc-dIUggk HhvtG"
    onClick={[Function]}
  >
    <div
      className="sc-hHftDr enidin"
    >
      Element1
    </div>
    <div
      className="sc-dmlrTW PQGKo"
    />
  </div>
</div>
`;

exports[`Storyshots Grid/Element Default 1`] = `
<div
  className="sc-idOhPF"
>
  <div
    className="sc-dIUggk bcnGBJ"
    onClick={[Function]}
  >
    <div
      className="sc-hHftDr enidin"
    >
      Element1
    </div>
    <div
      className="sc-dmlrTW PQGKo"
    />
  </div>
</div>
`;

exports[`Storyshots Grid/Element Header 1`] = `
<div
  className="sc-idOhPF"
>
  <div
    className="sc-dIUggk ispqBL"
    onClick={[Function]}
  >
    <div
      className="sc-hHftDr enidin"
    >
      Element1
    </div>
    <div
      className="sc-dmlrTW PQGKo"
    />
  </div>
</div>
`;

exports[`Storyshots Grid/Element Progress 1`] = `
<div
  className="sc-idOhPF"
>
  <div
    className="sc-dIUggk bcmFtp"
    onClick={[Function]}
  >
    <div
      className="sc-hHftDr enidin"
    >
      Element1
    </div>
    <div
      className="sc-dmlrTW PQGKo"
    />
  </div>
  <div
    className="MuiLinearProgress-root MuiLinearProgress-colorPrimary MuiLinearProgress-indeterminate"
    role="progressbar"
  >
    <div
      className="MuiLinearProgress-bar MuiLinearProgress-barColorPrimary MuiLinearProgress-bar1Indeterminate"
      style={Object {}}
    />
    <div
      className="MuiLinearProgress-bar MuiLinearProgress-bar2Indeterminate MuiLinearProgress-barColorPrimary"
      style={Object {}}
    />
  </div>
</div>
`;

exports[`Storyshots Grid/Element Scheduled 1`] = `
<div
  className="sc-idOhPF"
>
  <div
    className="sc-dIUggk cHiELO"
    onClick={[Function]}
  >
    <div
      className="sc-hHftDr enidin"
    >
      Element1
    </div>
    <div
      className="sc-dmlrTW PQGKo"
    />
  </div>
</div>
`;

exports[`Storyshots Grid/Element Selected 1`] = `
<div
  className="sc-idOhPF"
>
  <div
    className="sc-dIUggk jmSjKf"
    onClick={[Function]}
    selected={true}
  >
    <div
      className="sc-hHftDr enidin"
    >
      Element1
    </div>
    <div
      className="sc-dmlrTW PQGKo"
    >
      subtitle
    </div>
  </div>
</div>
`;

exports[`Storyshots Grid/Element Subtitle 1`] = `
<div
  className="sc-idOhPF"
>
  <div
    className="sc-dIUggk bcnGBJ"
    onClick={[Function]}
  >
    <div
      className="sc-hHftDr enidin"
    >
      Element1
    </div>
    <div
      className="sc-dmlrTW PQGKo"
    >
      subtitle
    </div>
  </div>
</div>
`;

exports[`Storyshots Grid/Grid Default 1`] = `
<div
  className="sc-fKFyDc hkLWbf"
>
  <div>
    No results
  </div>
</div>
`;

exports[`Storyshots Grid/Grid Filled 1`] = `
Array [
  <div
    className="sc-fKFyDc hkLWbf"
  >
    <div>
      No results
    </div>
  </div>,
  <div>
    event: selected col: 
    
     
  </div>,
]
`;

exports[`Storyshots ProgressContainer Default 1`] = `
<div
  className="sc-gsTCUz jVamXT"
>
  <div
    className="sc-dlfnbm hGCbir"
  />
  <p
    className="MuiTypography-root MuiTypography-body1"
  >
    75
     %
  </p>
</div>
`;

exports[`Storyshots ProgressContainer Variant 1`] = `
<div
  className="sc-gsTCUz hxQUUc"
>
  <div
    className="sc-dlfnbm llOsYf"
  />
  <p
    className="MuiTypography-root MuiTypography-body1"
  >
    75
     %
  </p>
</div>
`;

exports[`Storyshots StateButton Danger 1`] = `
<button
  className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiButton-label"
  >
    Danger
  </span>
</button>
`;

exports[`Storyshots StateButton Info 1`] = `
<button
  className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiButton-label"
  >
    Info
  </span>
</button>
`;

exports[`Storyshots StateButton Primary 1`] = `
<button
  className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiButton-label"
  >
    Primary
  </span>
</button>
`;

exports[`Storyshots StateButton Secondary 1`] = `
<button
  className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiButton-label"
  >
    Secondary
  </span>
</button>
`;

exports[`Storyshots StateButton Success 1`] = `
<button
  className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiButton-label"
  >
    Success
  </span>
</button>
`;

exports[`Storyshots StateButton Warning 1`] = `
<button
  className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiButton-label"
  >
    Warning
  </span>
</button>
`;

exports[`Storyshots TriStateSelect Checked 1`] = `
<span
  aria-disabled={false}
  className="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-89 MuiCheckbox-root MuiCheckbox-colorSecondary PrivateSwitchBase-checked-90 Mui-checked MuiIconButton-colorSecondary"
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={null}
>
  <span
    className="MuiIconButton-label"
  >
    <input
      checked={true}
      className="PrivateSwitchBase-input-92"
      data-indeterminate={false}
      onChange={[Function]}
      type="checkbox"
    />
    <svg
      aria-hidden={true}
      className="MuiSvgIcon-root"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
      />
    </svg>
  </span>
</span>
`;

exports[`Storyshots TriStateSelect Default 1`] = `
<span
  aria-disabled={false}
  className="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-85 MuiCheckbox-root MuiCheckbox-colorSecondary MuiCheckbox-indeterminate MuiIconButton-colorSecondary"
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={null}
>
  <span
    className="MuiIconButton-label"
  >
    <input
      checked={false}
      className="PrivateSwitchBase-input-88"
      data-indeterminate={true}
      onChange={[Function]}
      type="checkbox"
    />
    <svg
      aria-hidden={true}
      className="MuiSvgIcon-root"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-2 10H7v-2h10v2z"
      />
    </svg>
  </span>
</span>
`;

exports[`Storyshots TriStateSelect Unchecked 1`] = `
<span
  aria-disabled={false}
  className="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-93 MuiCheckbox-root MuiCheckbox-colorSecondary MuiIconButton-colorSecondary"
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={null}
>
  <span
    className="MuiIconButton-label"
  >
    <input
      checked={false}
      className="PrivateSwitchBase-input-96"
      data-indeterminate={false}
      onChange={[Function]}
      type="checkbox"
    />
    <svg
      aria-hidden={true}
      className="MuiSvgIcon-root"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
      />
    </svg>
  </span>
</span>
`;

exports[`Storyshots TriStateSelect Undefined 1`] = `
<span
  aria-disabled={false}
  className="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-97 MuiCheckbox-root MuiCheckbox-colorSecondary MuiCheckbox-indeterminate MuiIconButton-colorSecondary"
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={null}
>
  <span
    className="MuiIconButton-label"
  >
    <input
      checked={false}
      className="PrivateSwitchBase-input-100"
      data-indeterminate={true}
      onChange={[Function]}
      type="checkbox"
    />
    <svg
      aria-hidden={true}
      className="MuiSvgIcon-root"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-2 10H7v-2h10v2z"
      />
    </svg>
  </span>
</span>
`;
